--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
   <link href="connect4.css" rel="stylesheet">
 </head>
 <body>
-  <button id="start-button">Start Game</button>
+
+
+    <label>Player 1 Color</label>
+    <input id="p1-color" type="text"></input>
+    <label>Player 2 Color</label>
+    <input id="p2-color" type="text"></input>
+
+
+<button id="start-button">Start Game</button>
 
 <div id="game">
   <table id="board"></table>
